docs(deployment): Refactor and update deployment guide
Restructured the deployment documentation for improved clarity and readability.
Updated content to reflect the latest deployment procedures and best practices.